gateway-api/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
#     ReferenceGrant identifies kinds of resources in other namespaces that are
        trusted to reference the specified kinds of resources in the same namespace
        as the policy.
metadata:
 name: allow-http-route
 namespace: example-service-gateway
spec:
 from:
 - group: gateway.networking.k8s.io
   kind: HTTPRoute
#     HTTPRoute provides a way to route HTTP requests. This includes the capability
        to match requests by hostname, path, header, or query param. Filters can be
        used to specify additional processing steps. Backends specify where matching
        requests should be routed.
   namespace: hello-world
 to:
 - group: gateway.networking.k8s.io
   kind: Gateway
   name: example-service-gateway
