gateway-api/gateway-lb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: {app-name-gateway}
  namespace: {application-namespace-mame}
 spec:
  gatewayClassName: istio
  listeners:
    - name: https-default
      protocol: HTTPS            # Ensures secure communication
      port: 4443                 # Fixed, secure port for external access
      tls:
        mode: Terminate          # Performs TLS decryption at the Gateway
        certificateRefs:
          - group: ""
            kind: Secret
            name: {secret-name} # Name of the TLS secret (created by cert-manager)
            namespace: {secret-namepace}     # Namespace where the TLS secret resides
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true" # Allows HTTPRoutes from namespaces with this label to attach
