gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
# Gateway represents an instance of a service-traffic handling infrastructure 
     by binding Listeners to a set of IP addresses.
metadata:
  annotations:
    networking.istio.io/service-type: NodePort # Optional
  name: {app-name}-{gateway}
  namespace: application-submariner
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 8080
      protocol: HTTP
