gateway-api/httproute-lb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: {httproute-name}
  namespace: {app-namespace} # Namespace where your application service resides
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: {gateway-name}         # References the name of your Gateway resource
      namespace: {gateway-namespace} # References the namespace of your Gateway
  hostnames:
    - "{gateway-listener-name}" # Must exactly match the Gateway's listener hostname
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: {app-path-url} (i.e. “/AdminConsole”) # Defines the path prefix for routing
      backendRefs:
        - group: ""
          kind: Service
          name: {app-svc-external-name} # Name of your backend Kubernetes ExternalName Service
          port: {port-number}             # Port on your backend Service
