gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver
  namespace: application-submariner
spec:
  parentRefs:
  - name: webserver-gateway
    kind: Gateway
    namespace: application-submariner
  hostnames: ["10.70.71.41","webserver-gateway-application-submariner.apps.ocplandev.mac.org.il"]
  rules:
          #  - matches:
          #    - path:
          #type: PathPrefix
          #value: /
  - backendRefs:
    - name: webservice-external
      kind: Service
      port: 8080
