gateway-api/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
Metadata:
  name: {app-name}-service-entry
  namespace: application-submariner
spec:
  hosts:
    - {app-name}.{app-ns}.svc.clusterset.local
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 8080
      protocol: HTTP
  resolution: DNS
